Make subheaders correct size. Make header not overflow on mobile.

--- a/dc_theme/static/dc_theme/scss/dc/_material.scss
+++ b/dc_theme/static/dc_theme/scss/dc/_material.scss
@@ -46,6 +46,9 @@
   .card_header {
     font-size:2em;
   }
+  .card_subheader {
+    font-size:1.2em;
+  }
   .link-icon i {
     margin-top: 7px;
   }
